✨ intro section 추가

--- a/assets/styles/sass/base/_globals.scss
+++ b/assets/styles/sass/base/_globals.scss
@@ -2,7 +2,7 @@ html,
 body {
   @include text-style(text-1);
   font-family: $font-ko;
-  color: $gray-primary;
+  color: $blue;
   background-color: $beige;
 }
 
