--- a/assets/styles/css/index.css
+++ b/assets/styles/css/index.css
@@ -1,3 +1,310 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
 
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+html,
+body {
+  line-height: 1.4;
+  letter-spacing: -0.005;
+  font-size: 18px;
+  font-family: "Noto Sans KR", serif;
+  color: #3a6ecf;
+  background-color: #fff7e3;
+}
+
+body {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+@font-face {
+  font-family: "portfolio";
+  src: url("../../fonts/portfolio.eot");
+  src: url("../../fonts/portfolio.eot") format("embedded-opentype"), url("../../fonts/portfolio.ttf") format("truetype"), url("../../fonts/portfolio.woff") format("woff"), url("../../fonts/portfolio.svg") format("svg");
+}
+i {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "portfolio" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow:before {
+  content: "\e900";
+}
+
+.icon-cogwheel:before {
+  content: "\e901";
+}
+
+.icon-css:before {
+  content: "\e902";
+}
+
+.icon-html:before {
+  content: "\e903";
+}
+
+.icon-internet:before {
+  content: "\e904";
+}
+
+.icon-javascript:before {
+  content: "\e905";
+}
+
+.icon-next:before {
+  content: "\e906";
+}
+
+.icon-paint:before {
+  content: "\e907";
+}
+
+.icon-react-query:before {
+  content: "\e908";
+}
+
+.icon-react:before {
+  content: "\e909";
+}
+
+.icon-twinkle:before {
+  content: "\e90a";
+}
+
+.icon-typescript:before {
+  content: "\e90b";
+}
+
+.animated-text span {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(10px);
+}
+.animated-text.bounce span {
+  animation: bounce 0.6s ease-in-out forwards;
+}
+
+@keyframes bounce {
+  0% {
+    opacity: 0;
+    transform: translateY(10px) scale(0.5);
+  }
+  50% {
+    transform: translateY(-10px) scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+main {
+  overflow-x: hidden;
+}
+
+.section {
+  padding: 80px 20px;
+}
+.section-title {
+  line-height: 1.4;
+  letter-spacing: -0.005;
+  font-size: 36px;
+  font-weight: 700;
+  color: #3a6ecf;
+  font-family: "Alfa Slab One", serif;
+  text-align: center;
+}
+.section-body {
+  margin: 80px auto 0;
+  max-width: 1200px;
+}
+
+.intro {
+  display: flex;
+}
+.intro-header {
+  flex: 1;
+  padding: 40px 20px;
+  transform: translateX(50%);
+  transition: transform 400ms ease-in-out;
+}
+.intro-body {
+  flex: 1;
+  transform: translateX(100%);
+  opacity: 0;
+  transition: all 400ms ease-in-out;
+}
+.intro-body img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+.intro-title {
+  margin-top: 160px;
+  font-family: "Alfa Slab One", serif;
+  font-size: 3vw;
+  color: #3a6ecf;
+  text-align: center;
+}
+.intro-description {
+  line-height: 1.4;
+  letter-spacing: -0.005;
+  font-size: 18px;
+  color: #3a6ecf;
+  text-align: center;
+  margin-top: 240px;
+  opacity: 0;
+  transition: opacity 400ms 400ms ease-in-out;
+}
+.intro.is-loaded .intro-header {
+  transform: translateX(0);
+}
+.intro.is-loaded .intro-body {
+  transform: translateX(0);
+  opacity: 1;
+}
+.intro.is-loaded .intro-description {
+  opacity: 1;
+}
 
 /*# sourceMappingURL=index.css.map */
