--- a/assets/styles/css/index.css
+++ b/assets/styles/css/index.css
@@ -248,6 +248,11 @@ i {
   content: "\e90b";
 }
 
+.blog-card a {
+  padding: 16px 24px;
+  border-radius: 8px;
+}
+
 .skill-badge {
   padding: 4px 12px;
   border-radius: 8px;
@@ -265,6 +270,48 @@ i {
 }
 .about-item-description {
   margin-top: 20px;
+}
+
+.blog-card a {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 0 auto;
+  border: 1px solid #3a6ecf;
+  color: #3a6ecf;
+  transition: all 300ms ease-in-out;
+}
+.blog-card i {
+  font-size: 40px;
+}
+.blog-card-title {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-weight: 500;
+}
+.blog-card-description {
+  line-height: 1.4;
+  letter-spacing: -0.005;
+  font-size: 16px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin-top: 8px;
+}
+.blog-card .created-at {
+  line-height: 1.4;
+  letter-spacing: -0.005;
+  font-size: 14px;
+}
+.blog-card:hover a {
+  background-color: #3a6ecf;
+  color: #fff7e3;
+}
+.blog-card:hover i {
+  animation: icon-rotate 2s linear infinite;
 }
 
 .skill-badge {
@@ -310,6 +357,14 @@ i {
   100% {
     opacity: 1;
     transform: translateY(0) scale(1);
+  }
+}
+@keyframes icon-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 main {
@@ -411,6 +466,22 @@ main {
 }
 .skills .description-item:not(:first-of-type) {
   margin-top: 8px;
+}
+
+.blog-intro {
+  display: flex;
+  align-items: end;
+}
+.blog .view-more {
+  display: block;
+  margin-left: auto;
+  width: fit-content;
+}
+.blog .blog-card-area {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 12px;
+  margin-top: 80px;
 }
 
 /*# sourceMappingURL=index.css.map */
