--- a/assets/styles/sass/index.scss
+++ b/assets/styles/sass/index.scss
@@ -16,6 +16,7 @@
 @import "./components/badge";
 @import "./components/about-item";
 @import "./components/blog-card";
+@import "./components/project-box";
 @import "./components/skill-badge";
 @import "./components/main-text";
 @import "./animations/text.scss";
@@ -27,4 +28,5 @@
 @import "./sections/intro";
 @import "./sections/about";
 @import "./sections/skills";
+@import "./sections/projects";
 @import "./sections/blog";
