--- a/assets/styles/sass/components/_blog-card.scss
+++ b/assets/styles/sass/components/_blog-card.scss
@@ -5,8 +5,8 @@
     align-items: center;
     gap: 20px;
     margin: 0 auto;
-    border: 1px solid $blue;
-    color: $blue;
+    border: 1px solid var(--color-text);
+    color: var(--color-text);
     transition: all 300ms ease-in-out;
   }
 
@@ -29,8 +29,8 @@
   }
   &:hover {
     a {
-      background-color: $blue;
-      color: $beige;
+      background-color: var(--color-text);
+      color: var(--color-bg);
     }
     i {
       animation: icon-rotate 2s linear infinite;
