--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -134,57 +134,39 @@ a {
   text-decoration: none;
 }
 
+:root {
+  --color-text: #3a6ecf;
+  --color-bg: #fff7e3;
+}
+
+.bg-blue {
+  --color-text: #fff7e3;
+  --color-bg: #3a6ecf;
+}
+
 html,
 body {
   line-height: 1.4;
   letter-spacing: -0.005;
   font-size: 18px;
   font-family: "Noto Sans KR", serif;
-  color: #3a6ecf;
-  background-color: #fff7e3;
+  color: var(--color-text);
 }
 
 body {
   max-width: 1920px;
   margin: 0 auto;
+  background-color: var(--color-bg);
+  transition: background-color 200ms ease-in-out;
 }
-
-.paper-plane {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100px;
-  transform: rotate(180deg);
-  offset-distance: 100%;
-  offset-rotate: auto 90deg;
-  offset-path: path("m523.89,4304.71v-102.65c0-380.2-349.01-699.56-349.01-699.56-444.83-376.4,250.93-486.65,250.93-486.65,444.83-102.65,557.68-250.93,557.68-250.93,283.93-319.37-486.96-646.34-486.96-646.34-258.91-112.16-314.04-296.55-314.04-296.55C-5.24,1295.45,395.39,1206.1,502.03,1255.07c65,29.84,105.64,109.85,90,179.91-35.06,157.03-234.66,151.32-234.66,151.32-287.05,0-340.67-193.9-340.67-193.9-85.15-285.15,215.21-534.18,215.21-534.18,309.81-245.7,291.98-636.53,291.98-636.53V0");
-}
-
-.track {
-  position: absolute;
-  left: 50vw;
-  top: 0;
-  width: 1048px;
-  transform: translateX(-50%);
-}
-
-.flight-path {
-  stroke: white;
-  stroke-width: 7px;
-  stroke-dasharray: 14px;
-  fill: none;
-}
-
-.scroll-timeline {
-  position: relative;
-  height: 4315px;
-  margin: 200px 0;
+body.no-scroll {
+  overflow: hidden;
 }
 
 @font-face {
   font-family: "portfolio";
-  src: url("../../fonts/portfolio.eot");
-  src: url("../../fonts/portfolio.eot") format("embedded-opentype"), url("../../fonts/portfolio.ttf") format("truetype"), url("../../fonts/portfolio.woff") format("woff"), url("../../fonts/portfolio.svg") format("svg");
+  src: url("../../../../public/fonts/portfolio.eot");
+  src: url("../../../../public/fonts/portfolio.eot") format("embedded-opentype"), url("../../../../public/fonts/portfolio.ttf") format("truetype"), url("../../../../public/fonts/portfolio.woff") format("woff"), url("../../../../public/fonts/portfolio.svg") format("svg");
 }
 i {
   /* use !important to prevent issues with browser extensions that change fonts */
@@ -277,8 +259,8 @@ i {
   align-items: center;
   gap: 20px;
   margin: 0 auto;
-  border: 1px solid #3a6ecf;
-  color: #3a6ecf;
+  border: 1px solid var(--color-text);
+  color: var(--color-text);
   transition: all 300ms ease-in-out;
 }
 .blog-card i {
@@ -307,8 +289,8 @@ i {
   font-size: 14px;
 }
 .blog-card:hover a {
-  background-color: #3a6ecf;
-  color: #fff7e3;
+  background-color: var(--color-text);
+  color: var(--color-bg);
 }
 .blog-card:hover i {
   animation: icon-rotate 2s linear infinite;
@@ -318,7 +300,8 @@ i {
   padding: 80px 60px;
   max-width: 1200px;
   border-radius: 24px;
-  background-color: #fff7e3;
+  background-color: var(--color-text);
+  color: var(--color-bg);
 }
 .project-box-title {
   line-height: 1.4;
@@ -366,8 +349,8 @@ i {
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  background-color: #3a6ecf;
-  color: #fff7e3;
+  background-color: var(--color-text);
+  color: var(--color-bg);
   font-weight: 400;
 }
 .skill-badge i {
@@ -382,12 +365,12 @@ i {
   font-weight: 400;
 }
 
-.animated-text span {
+.bounce-text span {
   display: inline-block;
   opacity: 0;
   transform: translateY(10px);
 }
-.animated-text.bounce span {
+.bounce-text.bounce span {
   animation: bounce 0.6s ease-in-out forwards;
 }
 
@@ -413,18 +396,17 @@ i {
   }
 }
 main {
-  overflow-x: hidden;
+  contain: paint;
 }
 
 .section {
-  padding: 80px 20px;
+  padding: 120px 20px;
 }
 .section-title {
   line-height: 1.4;
   letter-spacing: -0.005;
   font-size: 36px;
   font-weight: 700;
-  color: #3a6ecf;
   font-family: "Alfa Slab One", serif;
   text-align: center;
 }
@@ -439,14 +421,10 @@ main {
 .intro-header {
   flex: 1;
   padding: 40px 20px;
-  transform: translateX(50%);
-  transition: transform 400ms ease-in-out;
 }
 .intro-body {
   flex: 1;
-  transform: translateX(100%);
   opacity: 0;
-  transition: all 400ms ease-in-out;
 }
 .intro-body img {
   width: 100%;
@@ -457,30 +435,20 @@ main {
   margin-top: 160px;
   font-family: "Alfa Slab One", serif;
   font-size: 3vw;
-  color: #3a6ecf;
   text-align: center;
 }
 .intro-description {
   line-height: 1.4;
   letter-spacing: -0.005;
   font-size: 18px;
-  color: #3a6ecf;
   text-align: center;
   margin-top: 240px;
-  opacity: 0;
-  transition: opacity 400ms 400ms ease-in-out;
-}
-.intro.is-loaded .intro-header {
-  transform: translateX(0);
-}
-.intro.is-loaded .intro-body {
-  transform: translateX(0);
-  opacity: 1;
-}
-.intro.is-loaded .intro-description {
-  opacity: 1;
 }
 
+.about {
+  margin-top: -20;
+  padding-top: 0;
+}
 .about-item {
   margin-top: 120px;
 }
@@ -504,7 +472,6 @@ main {
   align-items: start;
   gap: 8px;
   max-width: 900px;
-  color: #3a6ecf;
 }
 .skills .description-item i {
   margin-top: 4px;
@@ -513,9 +480,6 @@ main {
   margin-top: 8px;
 }
 
-.projects {
-  background-color: #3a6ecf;
-}
 .projects .section-title {
   color: #ffd340;
 }
@@ -537,6 +501,21 @@ main {
   grid-template-columns: repeat(2, 1fr);
   gap: 12px;
   margin-top: 80px;
+}
+
+.ending {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 200px 0 300px;
+}
+.ending a {
+  line-height: 1.4;
+  letter-spacing: -0.005;
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=index.css.map */
