--- a/src/styles/sass/layouts/_section.scss
+++ b/src/styles/sass/layouts/_section.scss
@@ -1,7 +1,7 @@
 .section {
-  padding: 80px 20px;
+  padding: 120px 20px;
   &-title {
-    @include text-style(title-1, $blue);
+    @include text-style(title-1);
     font-family: $font-en;
     text-align: center;
   }
