--- a/src/styles/sass/sections/_intro.scss
+++ b/src/styles/sass/sections/_intro.scss
@@ -3,10 +3,12 @@
   &-header {
     flex: 1;
     padding: 40px 20px;
+    transform: translateX(50%);
   }
   &-body {
     flex: 1;
     opacity: 0;
+    transform: translateX(100%);
     img {
       width: 100%;
       height: 100vh;
