--- a/src/styles/sass/sections/_intro.scss
+++ b/src/styles/sass/sections/_intro.scss
@@ -1,29 +1,45 @@
 .intro {
   display: flex;
-  &-header {
-    flex: 1;
-    padding: 40px 20px;
-    transform: translateX(50%);
-  }
+  flex-direction: column;
+  gap: 80px;
+  text-align: center;
   &-body {
-    flex: 1;
     opacity: 0;
-    transform: translateX(100%);
     img {
       width: 100%;
-      height: 100vh;
+      height: 40vh;
       object-fit: cover;
     }
   }
   &-title {
-    margin-top: 160px;
+    margin-top: 80px;
     font-family: $font-en;
-    font-size: 3vw;
-    text-align: center;
+    font-size: 6vw;
   }
   &-description {
-    @include text-style(text-1);
-    text-align: center;
-    margin-top: 240px;
+    margin-top: 80px;
+  }
+  @include responsive(lg) {
+    flex-direction: row;
+    gap: 0;
+    &-header {
+      flex: 1;
+      padding: 40px 20px;
+      transform: translateX(50%);
+    }
+    &-body {
+      flex: 1;
+      transform: translateX(100%);
+      img {
+        height: 100vh;
+      }
+    }
+    &-title {
+      margin-top: 160px;
+      font-size: 3vw;
+    }
+    &-description {
+      margin-top: 240px;
+    }
   }
 }
