--- a/src/styles/sass/components/_main-text.scss
+++ b/src/styles/sass/components/_main-text.scss
@@ -1,4 +1,7 @@
 .main-text {
-  @include text-style(title-3);
+  @include text-style(title-4);
   font-weight: 400;
+  @include responsive(lg) {
+    @include text-style(title-3);
+  }
 }
