💄 skills 반응형 추가

--- a/src/styles/sass/sections/_skills.scss
+++ b/src/styles/sass/sections/_skills.scss
@@ -4,12 +4,16 @@
     flex-direction: column;
     align-items: center;
   }
+  .badge-area {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
   .description {
     &-list {
       margin: 40px auto 0;
     }
     &-item {
-      @include text-style(text-1);
       display: flex;
       align-items: start;
       gap: 8px;
@@ -22,5 +26,7 @@
         margin-top: 8px;
       }
     }
+  }
+  @include responsive(md) {
   }
 }
