--- a/src/styles/sass/components/_skill-badge.scss
+++ b/src/styles/sass/components/_skill-badge.scss
@@ -1,6 +1,6 @@
 .skill-badge {
   @extend %badge-base;
-  @include text-style(text-2);
+  @include text-style(text-3);
   display: inline-flex;
   align-items: center;
   gap: 8px;
@@ -8,6 +8,12 @@
   color: var(--color-bg);
   font-weight: 400;
   i {
-    font-size: 18px;
+    font-size: 16px;
+  }
+  @include responsive(md) {
+    @include text-style(text-2);
+    i {
+      font-size: 18px;
+    }
   }
 }
