--- a/src/styles/sass/sections/_blog.scss
+++ b/src/styles/sass/sections/_blog.scss
@@ -1,17 +1,42 @@
 .blog {
   &-intro {
     display: flex;
-    align-items: end;
+    flex-direction: column;
+    background-color: var(--color-bg);
   }
   .view-more {
-    display: block;
-    margin-left: auto;
-    width: fit-content;
+    margin-top: 24px;
+    opacity: 0.8;
+    i {
+      display: inline-block;
+      transition: transform 200ms ease-in-out;
+    }
+    &:hover {
+      i {
+        transform: translateX(4px);
+      }
+    }
   }
   .blog-card-area {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 12px;
-    margin-top: 80px;
+    margin-top: 40px;
+  }
+  @include responsive(md) {
+    &-intro {
+      flex-direction: row;
+      align-items: end;
+    }
+    .view-more {
+      display: block;
+      margin-top: 0;
+      margin-left: auto;
+      width: fit-content;
+    }
+    .blog-card-area {
+      grid-template-columns: repeat(2, 1fr);
+      margin-top: 80px;
+    }
   }
 }
