✨ 비행기 애니메이션 추가

--- a/src/styles/sass/layouts/_route.scss
+++ b/src/styles/sass/layouts/_route.scss
@@ -2,26 +2,29 @@
   position: relative;
   top: -120px;
   margin: 0 auto;
-  max-width: 924px;
-
-  .timeline {
-    position: absolute;
-    top: 0;
-    left: 0;
+  max-width: 1200px;
+  transition: opacity 200ms ease;
+  &.is-hide {
+    opacity: 0;
   }
-
-  .paper-plane {
+  .airplane {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 9999;
-    transform: rotate(45deg);
+    z-index: 10;
     width: 40px;
     offset-distance: 0%;
-    offset-rotate: auto 0deg;
+    offset-rotate: auto 45deg;
     offset-path: path(
-      "M578 1C810.5 110.167 1159.1 419.3 693.5 782.5C111.5 1236.5 419 1350 498.5 1395.5C578 1441 996.5 1677 381 1876.5C-234.5 2076 70.9998 2444 116.5 2516C162 2588 821.5 3376.5 847.5 3494.5C873.5 3612.5 768.5 4420 583 4624.5C397.5 4829 292.5 5072 155 5336.5C17.5 5601 -73.5 5901.5 263 6041C599.5 6180.5 1201 6384.5 705.5 6577"
+      "M600.329 0V59C599.995 74.3333 610.729 106.6 656.329 113C713.329 121 931.829 133.5 982.829 387.5C1033.83 641.5 744.329 825.5 540.329 912C336.329 998.5 265.329 1336 540.329 1423.5C815.329 1511 854.329 1674 628.829 1746.5C403.329 1819 164.829 1817.5 87.3286 2084.5C9.8286 2351.5 267.829 2521 356.329 2564C444.829 2607 801.828 2840.5 837.328 3072.5C872.828 3304.5 598.328 3529 375.828 3652C153.328 3775 163.328 4173.5 472.328 4324C781.328 4474.5 859.828 4776.5 832.328 4922C804.828 5067.5 524.328 5307 401.328 5384.5C278.328 5462 160.828 5575 176.828 5761.5C192.828 5948 306.328 6044.5 595.328 6134C884.328 6223.5 1034.5 6211 1054 6378.5C1082.64 6624.5 788 6637 788 6637"
     );
+    transition: transform 200ms ease-in-out;
+    &.is-up {
+      transform: rotate(180deg);
+    }
+    path {
+      fill: var(--color-text);
+    }
     &-first {
       offset-distance: 0%;
     }
