--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -24,6 +24,7 @@
 
 @import "./layouts/main.scss";
 @import "./layouts/section.scss";
+@import "./layouts/route";
 
 @import "./sections/intro";
 @import "./sections/about";
