--- a/src/styles/sass/sections/_intro.scss
+++ b/src/styles/sass/sections/_intro.scss
@@ -23,12 +23,14 @@
     flex-direction: row;
     gap: 0;
     &-header {
-      flex: 1;
+      flex-shrink: 0;
+      width: 50%;
       padding: 40px 20px;
       transform: translateX(50%);
     }
     &-body {
-      flex: 1;
+      flex-shrink: 0;
+      width: 50%;
       transform: translateX(100%);
       img {
         height: 100vh;
