--- a/src/styles/sass/constants/_typography.scss
+++ b/src/styles/sass/constants/_typography.scss
@@ -1,8 +1,9 @@
-$font-ko: "Noto Sans KR", serif;
+$font-kr: "Noto Sans KR", serif;
 $font-en: "Alfa Slab One", serif;
 
 $line-height: 1.4;
-$letter-spacing: -0.005;
+$letter-spacing-kr: -0.005em;
+$letter-spacing-en: 0.05em;
 
 $typography-title-1: 36px;
 
