--- a/src/styles/sass/components/_about-item.scss
+++ b/src/styles/sass/components/_about-item.scss
@@ -1,8 +1,9 @@
 .about-item {
   max-width: 600px;
+  background-color: var(--color-bg);
+  box-shadow: 0 0 40px 20px var(--color-bg);
   &-title {
     @include text-style(title-4);
-    font-weight: 400;
   }
   &-description {
     margin-top: 20px;
