🐛 font 파일 경로 수정

--- a/src/styles/sass/base/_fonts.scss
+++ b/src/styles/sass/base/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "portfolio";
-  src: url("../../../../public/fonts/portfolio.eot");
-  src: url("../../../../public/fonts/portfolio.eot") format("embedded-opentype"),
-    url("../../../../public/fonts/portfolio.ttf") format("truetype"),
-    url("../../../../public/fonts/portfolio.woff") format("woff"),
-    url("../../../../public/fonts/portfolio.svg") format("svg");
+  src: url("../fonts/portfolio.eot");
+  src: url("../fonts/portfolio.eot") format("embedded-opentype"),
+    url("../fonts/portfolio.ttf") format("truetype"),
+    url("../fonts/portfolio.woff") format("woff"),
+    url("../fonts/portfolio.svg") format("svg");
 }
