--- a/src/styles/sass/sections/_about.scss
+++ b/src/styles/sass/sections/_about.scss
@@ -1,10 +1,12 @@
 .about {
-  margin-top: -20;
-  padding-top: 0;
   &-item {
     margin-top: 120px;
     &:nth-of-type(2n) {
       margin-left: auto;
     }
+  }
+  @include responsive(lg) {
+    margin-top: -20;
+    padding-top: 0;
   }
 }
