--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -17,8 +17,10 @@
 @import "./components/about-item";
 @import "./components/blog-card";
 @import "./components/project-box";
+@import "./components/preview-card";
 @import "./components/skill-badge";
 @import "./components/main-text";
+
 @import "./animations/text.scss";
 @import "./animations/icon-rotate";
 
