💄 project link UI 업데이트

--- a/src/styles/sass/components/_icon.scss
+++ b/src/styles/sass/components/_icon.scss
@@ -13,6 +13,9 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-link:before {
+  content: "\e90c";
+}
 .icon-arrow:before {
   content: "\e900";
 }
