--- a/src/styles/sass/components/_project-box.scss
+++ b/src/styles/sass/components/_project-box.scss
@@ -4,15 +4,18 @@
   border-radius: $radius-lg;
   background-color: var(--color-text);
   color: var(--color-bg);
+  a {
+    text-decoration: underline;
+    i {
+      display: inline-block;
+      margin-left: 4px;
+    }
+  }
   &-title {
     @include text-style(title-4);
     display: flex;
     align-items: baseline;
     gap: 8px;
-    a {
-      @include text-style(text-2);
-      text-decoration: underline;
-    }
   }
   .notice {
     margin-top: 20px;
@@ -43,7 +46,6 @@
       font-weight: 700;
       a {
         @include text-style(text-3);
-        text-decoration: underline;
       }
     }
     ul {
